--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 
 network encryption
 authentication
+	strlen + 1?
+	delete items from keychain on app delete
 ensure RSA swap request comes from Sup app (ie not from a fisher): maybe some sort of time-dependent key to pass with RSA swap
 
 self <=> get internal hole punching working
