--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 authentication
+	why isn't AES key being retrieved properly in ios app? something wrong in - (id)objectForKey:(id)key
 	encrypt AES key with RSA key
 	handle new user vs existing user in ios app
 	finish new user status (including password)
