--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@ authentication
 		4-for 2 & 3, move big chunk of code from main-server->STATUS_INIT_NODE to authn-server, yeah?
 	strlen + 1?
 	delete items from keychain on app delete
+	delete "stale" authn_nodes from authn hashtable
+	delete "stale" token_nodes from token hashtable
 
 	do we even need an AuthN token? I guess it verifies to the main server that we're authenticated, right? If the main server doesn't find a matching AuthN token in the corresponding hashnode->node, then it rejects that node, right? Answer: copy AuthN key (concated fam, ip, port) and token to node_t and node_buf_t, and match key and token from node_t with incoming data. Ywah?
 
