--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@ new ios functionality:
 	save chat history locally
 	show chat history in textview
 
+chat_buf_t, make msg arbitrarily long by making it a pointer?
+
 finish new user
 does sign-out work?
 
