--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 
+save costs: take down support page and apache web server
 remove stale nodes (**** see PEER REPORTING OF OTHER PEERS THAT APPEAR OFFLINE below)
 stay-in-touch with peers (and self nodes?)
 
